# FMI-IS

./: .gitignore  IS-Presentation-2016.ppt  README.md  kursov_proekt.ppt
homework/hw1/: README.md  test-cases
homework/hw1/source/: main.cpp
homework/hw2/: .ccls  README.md  makeMe.sh
homework/hw2/source/: main.cpp
homework/hw3/: .ccls  README.md  makeMe.sh
homework/hw3/UK_TSP/: UK_TSP.ipynb
homework/hw3/UK_TSP/.ipynb_checkpoints/: UK_TSP-checkpoint.ipynb
homework/hw3/source/: main.cpp  tsp.cpp
homework/hw4/: README.md  makeMe.sh
homework/hw4/source/: tictactoe  tictactoe.cpp
homework/hw5/: .ccls  CMakeLists.txt  README.md
homework/hw5/source/: main.cpp
homework/hw6/: CMakeLists.txt  README.md  makeMe.sh
homework/hw6/source/: main.cpp
homework/hw7/: README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
homework/hw7/public/: bundle.js  index.html  style.css
homework/hw7/src/: index.ts
homework/hw8/: CMakeLists.txt  README.md
homework/hw8/source/: main.cpp
lectures/: DT learning.pptx  Entropy.pptx  NBC.pptx
practice/week02/: NQueens.java
project/: kursovi_Projects_AI_2021.docx  Идеи за дипломни работи-Прслав-Момчил-Георги.docx  Предложения за  теми за курсови проекти по Изкуствен интелект.docx
